added cookie creation for cart
cart retains info on page refresh

--- a/index.htm
+++ b/index.htm
@@ -120,7 +120,7 @@
 			</div>
             <div class="cart-total">
                 <strong class="cart-total-title">Total</strong>
-                <span class="cart-total-price">$0</span>
+                <span class="cart-total-price" id="cart-total-price">$0</span>
             </div>
             <button class="btn btn-primary btn-purchase" type="button">CHECKOUT</button>
 		</div><!--WILL NEED A WAY TO COMUNICATE IF A BIKE I SELECTED TO THE PAYMENT AND CART PAGES-->
