Customer Login works, cart remove implemented
Customer login now checks db and compares passwords. Gives popup for wrong password using cookie. Items removed from cart will not appear on page refresh. Items in cart are now generating the correct images on refresh. Changed login page to display login form for testing purposes. Removed '&' in Townies and cruisers description, as it caused issues with cookies.

--- a/index.htm
+++ b/index.htm
@@ -94,7 +94,7 @@
 			<img class="shop-item-image" src="./assets/images/bike6.png" alt="Bike6" width="600" height="400">
 			</a>
 			<div class="shop-item-details">
-				<p class="shop-item-title">Townies & Cruisers</p>
+				<p class="shop-item-title">Townies and Cruisers</p>
 				<p>Townies take the general concept of comfort hybrids and infuse them with the style of classic cruiser bikes. They are fun, stylish, and comfortable. They feature a special flat-foot design.</p>
 				<p class="shop-item-price">$178.99</p>
 				<button class="btn btn-primary shop-item-button" type="button">Add to Cart</button>
