started payment page
fixed bug on cust.php for password validation

--- a/htm/payment.htm
+++ b/htm/payment.htm
@@ -34,7 +34,7 @@
 				
 				<tr>
 					<td>
-						<form name="payment" action="feedback.htm" method="post"><!-- I NEED SOMEONE TO CHANGE THIS SO THAT THE FORM CAN COMMUNICATE WITH THE DATA BASE-->
+						<form name="payment" action="../php/payment.php" method="post"><!-- I NEED SOMEONE TO CHANGE THIS SO THAT THE FORM CAN COMMUNICATE WITH THE DATA BASE-->
 							<table id="nested_form">
 								<!--start actual form structure here-->
 								<tr>
