--- a/htm/payment.htm
+++ b/htm/payment.htm
@@ -3,6 +3,8 @@
 <head>
 	<title>NEB e-Commerce</title>
 	<link type="text/css" href="../common/styles.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="../common/payment.js"></script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 
